--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "@chakra-ui/core": "^0.8.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.11.0",
+    "bootstrap": "^4.5.2",
     "emotion-theming": "^10.0.27",
+    "final-form": "^4.20.1",
+    "mui-rff": "^2.4.0",
     "next": "9.5.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-bootstrap": "^1.3.0",
+    "react-dom": "16.13.1",
+    "react-final-form": "^6.5.1"
   }
 }
