--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "next-page-transitions": "^1.0.0-beta.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-cool-onclickoutside": "^1.5.5",
     "react-dom": "^16.13.1",
     "react-final-form": "^6.5.1",
+    "react-geosuggest": "^2.14.0",
     "styled-components": "^5.1.1",
     "use-places-autocomplete": "^1.3.10"
   }
